fixed octocat not showing on video page mobile

--- a/vite/VideoPage/styles.module.css
+++ b/vite/VideoPage/styles.module.css
@@ -14,8 +14,8 @@
 
 .background {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-size: cover;
